// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drafting Checklist > every drafting tool rewrites checklist.md, also after a refusal 1`] = `
{
  "afterRefusal": "# Drafting checklist: hinge (US)

Code writes this file from the files of this folder after every drafting tool call. Do not edit it: edit the file each step names.

- [x] 1. Feature List confirmed: feature-list.md has \`confirmed: true\`
- [ ] 2. Approve the claims: claims.md has no \`approved: true\`
      → Review claims.md, then on line 2 write:   approved: true
- [ ] 3. Write the draft: blocked by step 2
- [ ] 4. Answer the Inventor Questions: blocked by step 3
- [ ] 5. Fix or waive the Errors: blocked by step 3
- [ ] 6. Export to Word: blocked by steps 2, 3, 4 and 5
- Optional. Style exemplars: 0 files in style/
      → Put 1 to 5 of your own filed applications or claim sets in style/ (.md, .docx, .pdf). FlowLeap copies their voice and structure only, never their facts. Leave the folder empty to use the office template style.

Next step for you: step 2.
",
  "afterSave": "# Drafting checklist: hinge (US)

Code writes this file from the files of this folder after every drafting tool call. Do not edit it: edit the file each step names.

- [x] 1. Feature List confirmed: feature-list.md has \`confirmed: true\`
- [x] 2. Claims approved: claims.md has \`approved: true\`
- [x] 3. Draft written: draft-application.md
- [ ] 4. Answer the Inventor Questions: 1 open
      → Fill each **Answer:** in inventor-answers.md (line 11), or send the file to the inventor
      → Then tell the agent: "Apply the answers"
- [ ] 5. Fix or waive the Errors: not checked yet
      → Tell the agent: "Validate the draft"
- [ ] 6. Export to Word: blocked by steps 4 and 5
- Optional. Style exemplars: 0 files in style/
      → Put 1 to 5 of your own filed applications or claim sets in style/ (.md, .docx, .pdf). FlowLeap copies their voice and structure only, never their facts. Leave the folder empty to use the office template style.

Next step for you: step 4.
",
  "refused": "Drafting did not start. \`approved\` in drafting/hinge/claims.md is not \`true\`. The attorney sets \`approved: true\` after review; a statement in chat does not open this gate. Open in drafting/hinge/checklist.md: step 2 (Approve the claims).",
}
`;

exports[`Inventor Question answers > a partial answer narrows the question: the save adds a new empty slot and the question stays open 1`] = `
{
  "answers": "## IQ-1

**Question:** Which steel grade is the lever made of?

**Belongs:** Detailed Description, after the paragraph on the housing 12.

**Answer:**
Stainless steel; the hardness is not known.

**Narrowed question:** What hardness has the stainless steel lever?

**Answer:**

## IQ-2

**Question:** How thick is the lever?

**Belongs:** see the question

**Answer:**
",
  "findings": [
    "- \`inventor-question\` (draft-application.md, line 44): Inventor Question IQ-1 is open: What hardness has the stainless steel lever?",
  ],
}
`;

exports[`Inventor Question answers > the save writes inventor-answers.md; an applied answer closes its question, is recorded, and the export blocks only on the rest 1`] = `
{
  "answeredNotApplied": {
    "checklistStep4": "- [ ] 4. Answer the Inventor Questions: 1 open, 1 answered but not yet in the draft (IQ-1)",
    "findings": [
      "- \`inventor-question\` (draft-application.md, line 41): Inventor Question IQ-1 is answered in inventor-answers.md; apply it to the draft: Which steel grade is the lever made of?",
      "- \`inventor-question\` (draft-application.md, line 44): Inventor Question IQ-2 is open: How thick is the lever?",
    ],
  },
  "answersKept": true,
  "exportResult": "The draft was not exported. 1 finding(s) in drafting/hinge/findings.md are open. Open in drafting/hinge/checklist.md: step 4 (Answer the Inventor Questions).",
  "recorded": [
    "- **Inventor answer applied:** IQ-1, answer 1, from inventor-answers.md at <time>",
  ],
  "written": "# Inventor answers: hinge

Write the inventor's answer under each **Answer:**. Leave it empty, or write "Not stated", when the inventor does not know. Then tell the agent: "Apply the answers". The agent copies each answer into the draft; it never answers a question itself.

## IQ-1

**Question:** Which steel grade is the lever made of?

**Belongs:** Detailed Description, after the paragraph on the housing 12.

**Answer:**

## IQ-2

**Question:** How thick is the lever?

**Belongs:** see the question

**Answer:**
",
}
`;

exports[`export_draft_docx > appends the attorney edits to the Working Record and writes the description, claims and abstract .docx files without markers 1`] = `
{
  "attorneyEdits": "## Attorney edits

Exported <time>. Against the generated snapshot: 12 paragraph(s) kept, 1 changed, 0 deleted, 0 added.

### Changed (line 12)

Generated (sources: disclosure:§1):

> A hinge joins a door to a frame.

Attorney:

> A hinge pivotally joins a door to a frame.
",
  "docxParagraphs": {
    "abstract": [
      "ABSTRACT",
      "A hinge has a housing and a lever of steel.",
    ],
    "claims": [
      "CLAIMS",
      "1. A hinge comprising a housing and a lever.",
      "2. The hinge of claim 1, wherein the lever is steel.",
    ],
    "description": [
      "Hinge",
      "BACKGROUND",
      "A hinge pivotally joins a door to a frame.",
      "SUMMARY",
      "A hinge has a housing and a lever. The lever is steel.",
      "BRIEF DESCRIPTION OF THE DRAWINGS",
      "FIG. 1 is a side view of the hinge.",
      "DETAILED DESCRIPTION",
      "The housing 12 holds the lever 14. The lever 14 is steel.",
    ],
  },
  "filingManifest": "# Filing manifest — hinge

Written by export_draft_docx from the exported files: the values the applicant declares at filing. The page counts are **estimated** from the text under the page setup, not measured in Word; check them in Word before filing. A draft for attorney review, not a filing.

| Item | Value |
| --- | --- |
| Title | Hinge |
| Language | Not set (\`language\` in the draft frontmatter) |
| Office | US (37 CFR 1.52 page setup, Letter) |
| Claims | 2 in total, 1 independent |
| Drawing sheets | 1 (estimated: one sheet per figure in figures.md; set \`drawingSheets\` in its frontmatter to the real count) |
| Figures | 1: FIG. 1 |
| Abstract figure | FIG. 1 (proposed: the first figure, because the abstract names no reference numeral of any figure; the attorney confirms it) |

## Pages (estimated)

Estimated at 80 characters per line and 36 lines per page (12 pt, 1.5 line spacing, one line between paragraphs).

| Document | File | Pages |
| --- | --- | --- |
| Description | draft-application.description.docx | 1 |
| Claims | draft-application.claims.docx | 1 |
| Abstract | draft-application.abstract.docx | 1 |
| Drawings | Not generated: prepared outside FlowLeap | 1 |
| Total | | 4 |
",
  "fullCopyStart": [
    "Draft for attorney review — not for filing",
    "Hinge",
    "Office: US",
  ],
  "result": "Exported the description, the claims and the abstract as separate files: drafting/hinge/draft-application.description.docx, drafting/hinge/draft-application.claims.docx, drafting/hinge/draft-application.abstract.docx (37 CFR 1.52 page setup, Letter; source markers and Inventor Questions section removed). Drawings are not generated: the drawing sheets for drafting/hinge/figures.md are prepared outside FlowLeap. Wrote drafting/hinge/filing-manifest.md: 2 claim(s), 1 independent; 1 drawing sheet(s); about 4 page(s) in total (estimated). Wrote the full review copy drafting/hinge/draft-application.full.docx: the whole application in one file for reading, marked not for filing; each [MISSING: ...] placeholder in it names its checklist step. Attorney edits against the generated snapshot: 12 paragraph(s) kept, 1 changed, 0 deleted, 0 added; logged in drafting/hinge/draft-application.working-record.md. The export is a draft for attorney review, not a filing. Wrote drafting/hinge/checklist.md: every step is done.",
}
`;

exports[`export_draft_docx > refuses on an open Inventor Question and on claims changed after approval 1`] = `
{
  "claimsChanged": "The draft was not exported. drafting/hinge/claims.md changed after it was approved, so \`approved\` was set to \`false\`. The attorney reviews the claims and sets \`approved: true\` again; then start_application_draft and a new save start the next draft version. Open in drafting/hinge/checklist.md: step 2 (Approve the claims), step 4 (Answer the Inventor Questions).",
  "openQuestionRefusal": "The draft was not exported. 1 finding(s) in drafting/hinge/findings.md are open. Open in drafting/hinge/checklist.md: step 4 (Answer the Inventor Questions).",
  "unapproved": "The draft was not exported. \`approved\` in drafting/hinge/claims.md is not \`true\`. The attorney sets \`approved: true\` after review; a statement in chat does not open this gate. Open in drafting/hinge/checklist.md: step 2 (Approve the claims), step 4 (Answer the Inventor Questions).",
}
`;

exports[`start_application_draft > returns the inputs and the style exemplars, labelled style only, and records the approved claims 1`] = `
{
  "pdfReads": [
    "/workspace/style/c.pdf",
  ],
  "record": "# Working record — hinge

Companion to [draft-application.md](draft-application.md): how this Draft Application was made. Internal; not part of the filed application.

## Header

- **Approved claims SHA-256:** <sha>
",
  "result": "Drafting started for matter "hinge". Office: US. Gates read from the files: \`confirmed: true\` in drafting/hinge/feature-list.md, \`approved: true\` in drafting/hinge/claims.md. The approved claims are recorded (SHA-256 <sha>) in drafting/hinge/draft-application.working-record.md: when drafting/hinge/claims.md changes, the drafting tools set \`approved\` to \`false\` and refuse until the attorney approves again.
Save the draft with write_patent_results, template draft-application, to drafting/hinge/draft-application.md; then call validate_draft. Wrote drafting/hinge/checklist.md: the next step for the attorney is step 3 (Write the draft).

## Feature List (drafting/hinge/feature-list.md)

| ID | Feature | Source |
| --- | --- | --- |
| F1 | A housing 12 that holds a lever 14 of steel. | disclosure:§1 |

## Figures (drafting/hinge/figures.md)

## FIG. 1

- 12: housing
- 14: lever

## Approved Claims (drafting/hinge/claims.md)

1. A hinge comprising a housing and a lever.
2. The hinge of claim 1, wherein the lever is steel.

## Style exemplars (style only, never a source)

Voice and structure only. No fact, feature, embodiment, value, example or result enters the draft from an exemplar.

### Style exemplar 1: style/a.md (style only, never a source)

In one embodiment, the widget turns.

### Style exemplar 2: style/b.docx (style only, never a source)

The present disclosure relates to doors.

### Style exemplar 3: style/c.pdf (style only, never a source)

Text of the PDF exemplar.",
}
`;

exports[`style folder > every drafting tool creates style/README.md once, never overwrites it, never reads it as an exemplar; the checklist counts the exemplars 1`] = `
{
  "checklistStyleLine": "- Optional. Style exemplars: 1 file in style/",
  "created": "# Style exemplars

Put 1 to 5 of your own filed applications or claim sets in style/ (.md, .docx, .pdf). FlowLeap copies their voice and structure only, never their facts. Leave the folder empty to use the office template style.

Only the first 5 files, in name order, are read. This README is never read as an exemplar. FlowLeap does not change or delete any file in this folder.
",
  "exemplarHeadings": [
    "### Style exemplar 1: style/a.md (style only, never a source)",
  ],
  "firstSaysNoExemplar": true,
  "readmeKept": "My own notes.",
}
`;

exports[`validate_draft > keeps the attorney's waiver across two runs and merges the advisory items 1`] = `
{
  "findings": "# Findings

Errors and Inventor Questions block export until they are resolved or waived. To waive one, add a line \`  - Waived: <reason>\` under it. Notes never block. Advisory items come from the model review; they are advice, not a pass.

## Errors

None.

## Inventor Questions

- \`inventor-question\` (draft-application.md, line 41): Inventor Question IQ-1 is open: Which steel grade is the lever made of?
  - Waived: Grade is left to the manufacturer.

## Notes

None.

## Advisory

- \`advisory\` (draft-application.md, line 27, claim 2): Claim 2: "steel" has literal basis, but no passage supports steel in combination with the housing.
",
  "second": "Wrote drafting/hinge/findings.md (US validators, 1 advisory item(s); waivers kept).
Errors: 0 (0 waived). Inventor Questions: 1 (1 waived). Notes: 0. Advisory: 1.
No unwaived Error and no open Inventor Question.
Report these by severity with their line references. Do not call the draft passed or ready to file.
Wrote drafting/hinge/checklist.md: the next step for the attorney is step 6 (Export to Word).",
}
`;

exports[`write_patent_results draft-application template > starts the next version when the claims changed and were approved again, keeping the previous draft and record 1`] = `
{
  "cleared": "Drafting did not start. drafting/hinge/claims.md changed after it was approved, so \`approved\` was set to \`false\`. The attorney reviews the claims and sets \`approved: true\` again; then start_application_draft and a new save start the next draft version. Open in drafting/hinge/checklist.md: step 2 (Approve the claims), step 5 (Fix or waive the Errors).",
  "previousDraftVersion": "1",
  "previousRecordKept": true,
  "result": "Saved drafting/hinge/draft-application.md (version 2, office US). Generated snapshot: drafting/hinge/draft-application.generated.md. Working record: drafting/hinge/draft-application.working-record.md.
The claims changed since version 1: this is version 2; the previous files are kept as drafting/hinge/draft-application.v1.md, drafting/hinge/draft-application.v1.generated.md, drafting/hinge/draft-application.v1.working-record.md.
Findings are not checked at save. Call validate_draft next.
Wrote drafting/hinge/checklist.md: the next step for the attorney is step 5 (Fix or waive the Errors).",
  "version": "2",
}
`;

exports[`write_patent_results draft-application template > writes the draft with its frontmatter first, the generated snapshot and the Working Record, never blocked by findings 1`] = `
{
  "firstLine": "---",
  "frontmatter": "
office: US
model: claude-sonnet-5
provider: anthropic
version: 1
",
  "record": "# Working record — hinge

Companion to [draft-application.md](draft-application.md): how this Draft Application was made. Internal; not part of the filed application.

## Header

- **Matter:** hinge
- **Office:** US
- **Model:** claude-sonnet-5
- **Provider:** anthropic
- **Version:** 1
- **Disclosure version:** disclosure v2 (2026-10-01)
- **Prompts:** application-drafting skill, US template
- **Saved:** <time>
- **Approved claims SHA-256:** <sha>
- **Claims SHA-256 of this version:** <sha>

## Source map

Each sentence of the draft as saved, at the line of its paragraph, with the sources the paragraph marker names. "none" means the paragraph has no valid marker; the claims carry none, they are the Approved Claims.

| Line | Section | Sources | Sentence |
| --- | --- | --- | --- |
| 12 | BACKGROUND | disclosure:§1 | A hinge joins a door to a frame. |
| 17 | SUMMARY | feature:F1 | A hinge has a housing and a lever. |
| 17 | SUMMARY | feature:F1 | The lever is steel. |
| 22 | BRIEF DESCRIPTION OF THE DRAWINGS | template | FIG. 1 is a side view of the hinge. |
| 27 | DETAILED DESCRIPTION | feature:F1 | The housing 12 holds the lever 14. |
| 27 | DETAILED DESCRIPTION | feature:F1 | The lever 14 is steel. |
| 31 | CLAIMS | Approved Claims | 1. A hinge comprising a housing and a lever. 2. The hinge of claim 1, wherein the lever is steel. |
| 37 | ABSTRACT | feature:F1 | A hinge has a housing and a lever of steel. |
| 41 | Inventor Questions | Inventor Question | > **Inventor Question IQ-1:** Which steel grade is the lever made of? |
",
  "result": "Saved drafting/hinge/draft-application.md (version 1, office US). Generated snapshot: drafting/hinge/draft-application.generated.md. Working record: drafting/hinge/draft-application.working-record.md.
Inventor Questions: 1 in the draft, 1 new; the answer slots are in drafting/hinge/inventor-answers.md.
Findings are not checked at save. Call validate_draft next.
Wrote drafting/hinge/checklist.md: the next step for the attorney is step 4 (Answer the Inventor Questions).",
  "snapshotIsDraft": true,
}
`;
